# industry-analysis

./: .gitignore  PROJECT_OVERVIEW.md  README.md  industry_analysis_enhancement_plan.md  methodology.md  pyproject.toml  requirements.txt  run_pipeline.py  scan_for_anomalies.py
config/: macro_scenarios.yaml
docs/: CONTRACT_FOR_DOWNSTREAM.md  PD_Methodology_Reference_Downloads_v3.md  README.md  anchor_sources.md  australian_bank_industry_risk_practice_review.md  data_sources.md  improvements.md  methodology_cash_flow_lending.md  methodology_property_backed_lending.md  output_data_provenance.md  project_overview.md  property_reference_extraction_guide.md
notebooks/: 00_repo_overview.ipynb  01_public_data_ingestion.ipynb  01_results_and_report_walkthrough.ipynb  02_business_cycle_and_macro_panels.ipynb  02_methodology_and_output_map.ipynb  03_property_cycle_panels.ipynb  04_overlay_build_and_exports.ipynb  04_reporting.ipynb  05_validation_and_contract_outputs.ipynb  README.md
output/: chart_explanations.md  executive_summary.md
outputs/: anomaly_scan.txt  baseline_audit.txt  baseline_state.md  test_coverage.txt
reports/: make_figures.py  render_docx.py  render_html.py  render_markdown.py
scripts/: build_board_report.py  build_overlays.py  download_ptrs_public_data.py  download_public_data.py  export_contracts.py  rebuild_ptrs_workbook.py  run_demo_pipeline.py  run_pipeline.py  validate_upstream.py
src/: __init__.py  arrears_environment.py  bank_practice.py  benchmarks.py  borrowers.py  build_benchmarks.py  build_board_report.py  build_bottom_up.py  config.py  (+36 more)
(+164 files in other folders)
