[project]
name = "industry-risk-analysis-australia"
version = "0.1.0"
description = "Public-data-driven Australian industry risk analysis pipeline for credit portfolio demonstration."
readme = "README.md"
requires-python = ">=3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-p", "no:cacheprovider"]
