[project]
name = "australian-property-industry-risk-reference-layer"
version = "0.1.0"
description = "Australian public-data reference layer for property and industry risk overlays used by downstream PD, LGD, and EL workflows."
readme = "README.md"
requires-python = ">=3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-p", "no:cacheprovider"]
